# conan-template-setup

./: CMakeLists.txt
.github/workflows/: clang-format-diff.yml  debug.yml  main.yml  release.yml
src/: main.cpp
